# kms_rs

./: .gitignore  Cargo.toml  README.md
examples/: Cargo.toml  README.md
examples/src/: main.rs
src/: client.rs  lib.rs  parse.rs
