[package]
name = "kms_rs"
version = "0.1.0"
authors = ["Jeff Rade <jeffrade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
rusoto_core = "0.45.0"
rusoto_kms = "0.45.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.2"

[dev-dependencies]
clap = "2.33.3"