[package]
name = "kms_rs"
description = "A crate for interacting with AWS KMS."
readme = "README.md"
version = "0.2.0"
authors = ["Jeff Rade <jeffrade@gmail.com>"]
repository = "https://github.com/jeffrade/kms_rs"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["aws", "kms", "keys"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
bytes = "0.5"
futures = "0.3.8"
rusoto_core = "0.45.0"
rusoto_kms = "0.45.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.2"

[dev-dependencies]
clap = "2.33.3"