[package]
name = "kms_rs_example"
version = "0.1.0"
authors = ["Jeff Rade <jeffrade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
kms_rs = { path = "../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"